--- a/air-life-app/scss/_air-clinic-personal-center.scss
+++ b/air-life-app/scss/_air-clinic-personal-center.scss
@@ -53,4 +53,11 @@
   .color-pink{
     color: pink;
   }
+  .item-border{
+    padding: 0 !important;
+    border: none;
+  }
+  .item-icon-left{
+    border: none;
+  }
 }
