--- a/air-life-app/www/templates/air-clinic-edit-personal.html
+++ b/air-life-app/www/templates/air-clinic-edit-personal.html
@@ -1,35 +1,37 @@
 <ion-view view-title="修改联系人"   class="app-air-clinic-edit-personal">
   <ion-content >
-    <div class="list row" style="margin: 0px" >
-      <div class="item col-30" href="#" style="border: none">
+    <div class="list row"  >
+      <div class="item item-left">
         姓名
       </div>
-      <div class="item col-70" style="border: none;text-align: center" >
-        老司机
-      </div>
+      <input type="text" value="老司机" class="item item-right">
+
+      </input>
     </div>
     <div class="list row" >
-      <div class="item col-30" href="#" style="border: none">
+      <div class="item item-left">
         身份证
       </div>
-      <div class="item col-70" style="border: none;text-align: center" >
-        1231231235434124234234
-      </div>
+      <input type="text" value="1231231235434124234234" class="item item-right">
+
+      </input>
     </div>
     <div class="list row" >
-      <div class="item col-30" href="#" style="border: none">
+      <div class="item item-left">
         性别
       </div>
-      <ion-radio class="item col-34" ng-model="choice" ng-value="'A'" style="border: none">男</ion-radio>
-      <ion-radio class="item col-34" ng-model="choice" ng-value="'B'" style="border: none">女</ion-radio>
+      <div class="item item-right row sexy">
+      <ion-radio class="item col-50" ng-model="choice" ng-value="'A'" >男</ion-radio>
+      <ion-radio class="item col-34" ng-model="choice" ng-value="'B'" >女</ion-radio>
+      </div>
     </div>
     <div class="list row" >
-      <div class="item col-30" href="#" style="border: none">
+      <div class="item item-left">
         地址
       </div>
-      <div class="item col-70" style="border: none;text-align: center" >
-        西斜七路
-      </div>
+      <input type="text" value="西斜七路" class="item item-right">
+
+      </input>
 
     </div>
     <div class="card">
