--- a/air-life-app/www/templates/air-clinic-my-appointment.html
+++ b/air-life-app/www/templates/air-clinic-my-appointment.html
@@ -4,13 +4,13 @@
       <ion-slide ion-slide-tab-label="未付款" >
         <ion-content>
           <div class="row">
-            <div class="col-70">
-              <div><span>2016-12-02</span><span>11:25</span><span>老司机</span></div>
-            <div><span>口腔科</span><span>孙医生（工号007）</span></div>
+            <div class="row-left">
+              <div class="row urgent-appointment"><span class="col-33">2016-12-02</span><span class="col-33">11:25</span><span class="col-33">老司机</span></div>
+            <div class=" urgent-appointment"><span>口腔科</span><span>孙医生（工号007）</span></div>
             </div>
-            <div class="col-30">
-              <div>加急预约</div>
-              <div>￥0.01</div>
+            <div class="row-right">
+              <div class=" urgent-appointment">加急预约</div>
+              <div class=" urgent-appointment color-red">￥0.01</div>
             </div>
           </div>
         </ion-content>
@@ -18,13 +18,13 @@
       <ion-slide ion-slide-tab-label="已付款" >
         <ion-content>
           <div class="row">
-            <div class="col-70">
-              <div><span>2016-12-02</span><span>11:25</span><span>老司机</span></div>
-              <div><span>口腔科</span><span>孙医生（工号007）</span></div>
+            <div class="row-left">
+              <div class="row urgent-appointment"><span class="col-33">2016-12-02</span><span class="col-33">11:25</span><span class="col-33">老司机</span></div>
+              <div class=" urgent-appointment"><span>口腔科</span><span>孙医生（工号007）</span></div>
             </div>
-            <div class="col-30">
-              <div>加急预约</div>
-              <div>￥0.01</div>
+            <div class="row-right">
+              <div class=" urgent-appointment">加急预约</div>
+              <div class=" urgent-appointment color-red">￥0.01</div>
             </div>
           </div>
         </ion-content>
