--- a/air-life-app/www/templates/air-clinic-personal-center.html
+++ b/air-life-app/www/templates/air-clinic-personal-center.html
@@ -2,7 +2,7 @@
 <ion-view view-title="个人中心"   class="app-air-clinic-personal-center">
   <ion-content  class="content-body">
     <ul class="list">
-      <li class="item" style="padding: 0px;border: none">
+      <li class="item item-border">
       <div class="item item-icon-left item-content">
         <!--<i class="icon ion-ios-telephone-outline"></i>-->
         老司机</div>
@@ -13,16 +13,16 @@
 
     </ul>
     <ul class="list">
-      <li class="item" style="padding: 0px;border: none">
-        <div class="item item-icon-left"  style="border: none">
-          <a ng-click="onClickPersonalMessage()">
+      <li class="item item-border">
+        <div class="item item-icon-left">
+          <div ng-click="onClickPersonalMessage()">
             <div class="color-orange">
               <i class="icon ion-compose person-icon-inner "></i>
               <i class="icon ion-record person-icon-outer "></i>
               <i class="icon ion-ios-circle-outline"></i>
               </div>
             编辑个人信息
-          </a>
+          </div>
         </div>
        </li>
       <!--<li class="item-icon-left person-list-item" href="#/tab/person/person-edit">-->
@@ -33,25 +33,25 @@
 
 
 
-      <li class="item" style="padding: 0px;border: none">
-        <div class="item item-icon-left"  style="border: none">
-          <a ng-click="onClickResetPassword()">
+      <li class="item item-border">
+        <div class="item item-icon-left">
+          <div ng-click="onClickResetPassword()">
             <div class="color-pink">
               <i class="icon ion-locked small-icon"></i>
               <i class="icon ion-record person-icon-outer "></i>
               <i class="icon ion-ios-circle-outline"></i>
             </div>
             修改密码
-          </a>
+          </div>
 
 
         </div>
       </li>
     </ul>
     <ul class="list">
-      <li class="item" style="padding: 0px;border: none">
+      <li class="item item-border">
         <div class="item item-icon-left">
-          <a ng-click="onClickMyAppointment()">
+          <div ng-click="onClickMyAppointment()">
             <div class="color-red">
               <!--<i class="icon ion-compose person-icon-inner "></i>-->
               <i class="icon ion-ios-paper small-icon"></i>
@@ -61,24 +61,24 @@
             </div>
 
           我的预约
-          </a>
+          </div>
         </div>
       </li>
-      <li class="item" style="padding: 0px;border: none">
+      <li class="item item-border">
         <div class="item item-icon-left">
-          <a ng-click="onClickFamilyRelation()">
+          <div ng-click="onClickFamilyRelation()">
             <div class="colore-green">
           <i class="icon ion-person-stalker small-icon"></i>
             <i class="icon ion-record person-icon-outer "></i>
             <i class="icon ion-ios-circle-outline"></i>
             </div>
           家庭联系人
-          </a>
+          </div>
         </div>
       </li>
     </ul>
     <ul class="list">
-      <li class="item" style="padding: 0px;border: none">
+      <li class="item item-border">
         <div class="item item-icon-left">
 
           <div class="colore-blue">
@@ -89,7 +89,7 @@
           意见反馈
         </div>
       </li>
-      <li class="item" style="padding: 0px;border: none">
+      <li class="item item-border" >
         <div class="item item-icon-left">
           <div class="colore-purple">
             <i class="icon ion-information-circled small-icon"></i>
