--- a/air-life-app/www/templates/air-clinic-department.html
+++ b/air-life-app/www/templates/air-clinic-department.html
@@ -2,14 +2,22 @@
     <ion-content>
       <img ng-src="img/home-page.jpg">
       <ion-list class="list">
-        <ion-item class="item item-text-wrap">
-          <h2><a href="#/air-clinic-page">爱尔诊所后宰门诊室</a></h2>
+        <ion-item class="item item-text-wrap address-message">
+          <ion-item class="item-thumbnail-right item-text-wrap address" href="#/air-clinic-page">
+            <h2>爱尔诊所后宰门诊室</h2>
+          </ion-item>
           <p class="row">
             <ion-checkbox>三甲名医出诊</ion-checkbox>
             <ion-checkbox>无过度医疗</ion-checkbox>
           </p>
-          <p>紫薇龙腾新世界2611</p>
-          <p>紫薇龙腾新世界2611</p>
+          <ion-item class="item-thumbnail-right item-text-wrap address" href="#/air-clinic-address">
+            <i class="ion-chevron-right i"></i>
+            <p>紫薇龙腾新世界2611</p>
+          </ion-item>
+          <ion-item class="item-thumbnail-right item-text-wrap address phone" href="#/air-clinic-address">
+            <i class="ion-chevron-right i"></i>
+            <p>紫薇龙腾新世界2611</p>
+          </ion-item>
         </ion-item>
       </ion-list>
       <ion-list class="list">
