增加department页面定位和打电话小图标

--- a/air-life-app/scss/_air-clinic-department.scss
+++ b/air-life-app/scss/_air-clinic-department.scss
@@ -39,9 +39,18 @@
   .address{
     min-height: 20px;
     position: relative;
-    .i {
+    p{
+      padding-left: 20px;
+    }
+    .i-right {
       position: absolute;
       right: 18px;
+      color: #888;
+      font-size: 16px;
+    }
+    .i-left {
+      position: absolute;
+      left: 18px;
       color: #888;
       font-size: 16px;
     }
