--- a/air-life-app/www/templates/air-clinic-department.html
+++ b/air-life-app/www/templates/air-clinic-department.html
@@ -11,12 +11,14 @@
             <ion-checkbox>无过度医疗</ion-checkbox>
           </p>
           <ion-item class="item-thumbnail-right item-text-wrap address" href="#/air-clinic-address">
-            <i class="ion-chevron-right i"></i>
+            <i class="ion-chevron-right i-right"></i>
+            <i class="icon ion-android-locate placeholder-icon i-left"></i>
             <p>紫薇龙腾新世界2611</p>
           </ion-item>
           <ion-item class="item-thumbnail-right item-text-wrap address phone" href="#/air-clinic-address">
-            <i class="ion-chevron-right i"></i>
-            <p>紫薇龙腾新世界2611</p>
+            <i class="ion-chevron-right i-right"></i>
+            <i class="icon ion-android-call placeholder-icon i-left"></i>
+            <p>18710647749</p>
           </ion-item>
         </ion-item>
       </ion-list>
