--- a/air-life-app/www/templates/air-clinic-address.html
+++ b/air-life-app/www/templates/air-clinic-address.html
@@ -1,5 +1,4 @@
 <ion-view class="app-air-clinic-address" view-title="诊室地址">
-  <ion-content>
-      123123123
+  <ion-content id="container">
   </ion-content>
 </ion-view>
