--- a/air-life-app/www/templates/air-clinic-department.html
+++ b/air-life-app/www/templates/air-clinic-department.html
@@ -15,10 +15,10 @@
             <i class="icon ion-android-locate placeholder-icon i-left"></i>
             <p>紫薇龙腾新世界2611</p>
           </ion-item>
-          <ion-item class="item-thumbnail-right item-text-wrap address phone" href="#/air-clinic-address">
+          <ion-item class="item-thumbnail-right item-text-wrap address phone">
             <i class="ion-chevron-right i-right"></i>
             <i class="icon ion-android-call placeholder-icon i-left"></i>
-            <p>18710647749</p>
+            <p><a href="tel:18710647749">18710647749</a></p>
           </ion-item>
         </ion-item>
       </ion-list>
