--- a/air-life-app/www/templates/air-clinic-department.html
+++ b/air-life-app/www/templates/air-clinic-department.html
@@ -5,6 +5,7 @@
         <ion-item class="item item-text-wrap address-message">
           <ion-item class="item-thumbnail-right item-text-wrap address" href="#/air-clinic-page">
             <h2>爱尔诊所后宰门诊室</h2>
+            <a href="#a">点击我就会跳到第一段</a>
           </ion-item>
           <p class="row">
             <ion-checkbox>三甲名医出诊</ion-checkbox>
@@ -24,7 +25,8 @@
       </ion-list>
       <ion-list class="list">
         <ion-item class="departments">
-          <h2>科室 <span class="tips">(点击科室选择医生进行门诊预约)</span></h2>
+          <h2 id="a">我是标题一</h2>
+            <h2>科室 <span class="tips">(点击科室选择医生进行门诊预约)</span></h2>
         </ion-item>
         <!--添加item-text-wrap 可以使item类的内容换行-->
 
