--- a/air-life-app/www/templates/air-clinic-department.html
+++ b/air-life-app/www/templates/air-clinic-department.html
@@ -5,7 +5,6 @@
         <ion-item class="item item-text-wrap address-message">
           <ion-item class="item-thumbnail-right item-text-wrap address" href="#/air-clinic-page">
             <h2>爱尔诊所后宰门诊室</h2>
-            <a href="#a">点击我就会跳到第一段</a>
           </ion-item>
           <p class="row">
             <ion-checkbox>三甲名医出诊</ion-checkbox>
@@ -25,26 +24,47 @@
       </ion-list>
       <ion-list class="list">
         <ion-item class="departments">
-          <h2 id="a">我是标题一</h2>
-            <h2>科室 <span class="tips">(点击科室选择医生进行门诊预约)</span></h2>
+          <h2>科室 <span class="tips">(点击科室选择医生进行门诊预约)</span></h2>
         </ion-item>
         <!--添加item-text-wrap 可以使item类的内容换行-->
 
         <!--科室详情开始-->
         <!--科室1详情-->
-        <ion-item class="department-details item-thumbnail-right item-text-wrap" href="#/airClinicPage/:clinicId">
+        <ion-item class="department-details item-text-wrap" href="#/airClinicPage/1">
           <i class="ion-chevron-right i"></i>
-          <h2 class="bold">修复科(镶牙)<span>1位三甲医生</span></h2>
-          <p>固定义齿,活动义齿,全口义齿,牙齿美容,附着体义齿等治疗</p>
-        </ion-item>
-        <ion-item class="department-details item-thumbnail-right item-text-wrap">
-          <i class="ion-chevron-right i"></i>
-          <h2 class="bold">修复科(镶牙)<span>1位三甲医生</span></h2>
-          <p>固定义齿,活动义齿,全口义齿,牙齿美容,附着体义齿等治疗</p>
+          <h2 class="bold">综合科<span>1位三甲医生</span></h2>
+          <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
         </ion-item>
 
+        <!--科室2详情-->
+        <ion-item class="department-details item-text-wrap">
+          <i class="ion-chevron-right i"></i>
+          <h2 class="bold">综合科<span>1位三甲医生</span></h2>
+          <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
+        </ion-item>
 
+        <!--科室3详情-->
+        <ion-item class="department-details item-text-wrap">
+          <!--<i class="ion-chevron-right i"></i>-->
+          <h2 class="bold">综合科<span>1位三甲医生</span></h2>
+          <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
+        </ion-item>
+        <!--科室4详情-->
+        <ion-item class="department-details item-text-wrap">
+          <!--<i class="ion-chevron-right i"></i>-->
+          <h2 class="bold">综合科<span>1位三甲医生</span></h2>
+          <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
+        </ion-item>
         <!--科室详情结束-->
+      </ion-list>
+
+      <ion-list class="list">
+        <ion-item>
+          <h2>诊所介绍</h2>
+        </ion-item>
+        <ion-item class="item-text-wrap">
+          <p class="introduce">不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
+        </ion-item>
       </ion-list>
   </ion-content>
 </ion-view>
