完成我的预约，家庭联系人的借口调通

--- a/air-life-app/scss/_air-clinic-my-serve.scss
+++ b/air-life-app/scss/_air-clinic-my-serve.scss
@@ -8,6 +8,8 @@
     height:10px;
     border-radius:6px;
     border-color:#08a9ec;
+    font-size: 12px;
+    padding: 10px;
   }
   .tab-myserve-left{
     position:absolute;
