调通修改个人信息，家庭联系人，添加联系人的接口

--- a/air-life-app/www/templates/air-clinic-add-personal.html
+++ b/air-life-app/www/templates/air-clinic-add-personal.html
@@ -42,7 +42,7 @@
         请您正确填写个人信息，以便于对您提供优质服务
       </div>
     </div>
-    <button class="button button-block button-positive">
+    <button class="button button-block button-positive" ng-click="onClickAddPersonalButton()">
       保存
     </button>
   </ion-content>
