--- a/air-life-app/www/templates/air-clinic-edit-personal.html
+++ b/air-life-app/www/templates/air-clinic-edit-personal.html
@@ -45,7 +45,7 @@
     <button class="button button-block button-positive">
       保存
     </button>
-    <button class="button button-block  button-assertive">
+    <button class="button button-block  button-assertive" ng-click="onClickDeletePersonal()">
       删除
     </button>
   </ion-content>
