--- a/air-life-app/www/templates/air-clinic-department.html
+++ b/air-life-app/www/templates/air-clinic-department.html
@@ -4,7 +4,7 @@
       <ion-list class="list">
         <ion-item class="item item-text-wrap address-message">
           <ion-item class="item-thumbnail-right item-text-wrap address" href="#/air-clinic-page">
-            <h2>爱尔诊所后宰门诊室</h2>
+            <h2 ng-bind="clinicDepartment.name"></h2>
           </ion-item>
           <p class="row">
             <ion-checkbox>三甲名医出诊</ion-checkbox>
@@ -13,12 +13,12 @@
           <ion-item class="item-thumbnail-right item-text-wrap address" href="#/air-clinic-address">
             <i class="ion-chevron-right i-right"></i>
             <i class="icon ion-android-locate placeholder-icon i-left"></i>
-            <p>紫薇龙腾新世界2611</p>
+            <p ng-bind="clinicDepartment.address"></p>
           </ion-item>
           <ion-item class="item-thumbnail-right item-text-wrap address phone">
             <i class="ion-chevron-right i-right"></i>
             <i class="icon ion-android-call placeholder-icon i-left"></i>
-            <p><a href="tel:18710647749">18710647749</a></p>
+            <p ng-bind="clinicDepartment.phone"><a href="tel:{{clinicDepartment.phone}}"></a></p>
           </ion-item>
         </ion-item>
       </ion-list>
@@ -29,31 +29,12 @@
         <!--添加item-text-wrap 可以使item类的内容换行-->
 
         <!--科室详情开始-->
-        <!--科室1详情-->
-        <ion-item class="department-details item-text-wrap" href="#/airClinicPage/1">
+        <ion-item class="department-details item-text-wrap"
+                  ng-repeat="arr in clinicSpecial"
+                  href="#/airClinicPage/1">
           <i class="ion-chevron-right i"></i>
-          <h2 class="bold">综合科<span>1位三甲医生</span></h2>
-          <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
-        </ion-item>
-
-        <!--科室2详情-->
-        <ion-item class="department-details item-text-wrap">
-          <i class="ion-chevron-right i"></i>
-          <h2 class="bold">综合科<span>1位三甲医生</span></h2>
-          <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
-        </ion-item>
-
-        <!--科室3详情-->
-        <ion-item class="department-details item-text-wrap">
-          <!--<i class="ion-chevron-right i"></i>-->
-          <h2 class="bold">综合科<span>1位三甲医生</span></h2>
-          <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
-        </ion-item>
-        <!--科室4详情-->
-        <ion-item class="department-details item-text-wrap">
-          <!--<i class="ion-chevron-right i"></i>-->
-          <h2 class="bold">综合科<span>1位三甲医生</span></h2>
-          <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
+          <h2 class="bold">{{arr.name}}<span>{{arr.doctor_count}}位三甲医生</span></h2>
+          <p ng-bind="arr.description"></p>
         </ion-item>
         <!--科室详情结束-->
       </ion-list>
