--- a/air-life-app/www/templates/air-clinic-department.html
+++ b/air-life-app/www/templates/air-clinic-department.html
@@ -18,7 +18,7 @@
           <ion-item class="item-thumbnail-right item-text-wrap address phone">
             <i class="ion-chevron-right i-right"></i>
             <i class="icon ion-android-call placeholder-icon i-left"></i>
-            <p>{{clinicDepartment.phone}}<a href="tel:{{clinicDepartment.phone}}"></a></p>
+            <p><a href="tel:{{clinicDepartment.phone}}">{{clinicDepartment.phone}}</a></p>
           </ion-item>
         </ion-item>
       </ion-list>
