--- a/air-life-app/scss/_air-home-page.scss
+++ b/air-life-app/scss/_air-home-page.scss
@@ -2,6 +2,7 @@
   background-color: #f0f0f0;
   img{
     width: 100%;
+
   }
   .home-page{
     .row{
@@ -9,6 +10,10 @@
       h2,p{
         width: 100px;
       }
+    }
+    span{
+      font-size: 12px;
+      color: #707070;
     }
     .col-50{
       padding: 0 !important;
@@ -24,8 +29,9 @@
     }
     .row{
       img{
-        width: 38px;
-        height: 38px;
+        padding-bottom: 12px;
+        width: 56px;
+        height: 56px;
       }
     }
   }
