--- a/air-life-app/www/css/style.css
+++ b/air-life-app/www/css/style.css
@@ -364,6 +364,9 @@
     padding: 0 !important; }
     .app-air-home-page .home-page .row h2, .app-air-home-page .home-page .row p {
       width: 100px; }
+  .app-air-home-page .home-page span {
+    font-size: 12px;
+    color: #707070; }
   .app-air-home-page .home-page .col-50 {
     padding: 0 !important; }
   .app-air-home-page .home-page .list {
@@ -373,8 +376,9 @@
   .app-air-home-page .home-page .doctors {
     margin-top: 4px; }
   .app-air-home-page .home-page .row img {
-    width: 38px;
-    height: 38px; }
+    padding-bottom: 12px;
+    width: 56px;
+    height: 56px; }
 
 .app-air-clinic-my-service .slider {
   height: 100%; }
