--- a/air-life-app/www/templates/air-login.html
+++ b/air-life-app/www/templates/air-login.html
@@ -1,10 +1,13 @@
 <ion-view hide-nav-bar="true" class="app-air-login">
   <ion-content>
     <div class="page-home">
-      <div class="list list-inset">
+      <form name="loginForm">
+      <div class="list list-inset" ng-class="{'has-success':loginForm.userName.$dirty,'has-error':!loginForm.userName.$dirty}">
         <label class="item item-input">
           <i class="icon ion-android-person placeholder-icon"></i>
-          <input type="text" ng-model="user.username" placeholder="请输入手机号">
+          <input type="text" ng-model="user.username"
+                 name="userName"
+                 placeholder="请输入手机号">
         </label>
       </div>
       <div class="list list-inset">
@@ -15,7 +18,8 @@
       </div>
       <button class="button button-block  button-light" ng-click="onClickLoginButton()">登陆</button>
       <button class="button button-light button-small" ng-click="onClickResetPasswordButton()">忘记密码</button>
-      <button class="button button-light button-small button-right" ng-click="onClickRegisterUserButton()">注册</button>
+        <button class="button button-light button-small button-right" ng-click="onClickRegisterUserButton()">注册</button>
+      </form>
     </div>
   </ion-content>
 </ion-view>
